--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 20px;
 }
 
@@ -13,3 +13,6 @@ td {
   color: #ffffff
 }
 
+.with-margin {
+  margin-bottom: 5px;
+}
